# libwt

./: CMakeLists.txt  annotated.html  build.sh  citelist.html  classes.html  classwt_1_1_cauchy-members.html  classwt_1_1_cauchy.html  classwt_1_1_cauchy_obj-members.html  classwt_1_1_cauchy_obj.html  classwt_1_1_container-members.html  classwt_1_1_container.html  classwt_1_1_convolution-members.html  classwt_1_1_convolution.html  classwt_1_1_error-members.html  classwt_1_1_error.html  classwt_1_1_f_f_t-members.html  classwt_1_1_f_f_t.html  classwt_1_1_morlet-members.html  classwt_1_1_morlet.html  classwt_1_1_morlet_obj-members.html  classwt_1_1_morlet_obj.html  classwt_1_1_moving_sum-members.html  classwt_1_1_moving_sum.html  classwt_1_1_object-members.html  classwt_1_1_object.html  classwt_1_1_wavelet-members.html  classwt_1_1_wavelet.html  classwt_1_1_wavelet_analysis-members.html  classwt_1_1_wavelet_analysis.html  classwt_1_1_wavelet_obj-members.html  classwt_1_1_wavelet_obj.html  classwt_1_1_wavelet_synthesis-members.html  classwt_1_1_wavelet_synthesis.html  classwt_1_1_wavelet_transform-members.html  classwt_1_1_wavelet_transform.html  convolution_8hh_source.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  exception_8hh_source.html  fft_8hh_source.html  fft__fftw3_8hh_source.html  (+24 more)
cmake/: FindEigen3.cmake  FindFFTW3.cmake
doc/: Doxyfile  references.bib
doc/examples/: ar2_1024.csv  ar2_16384.csv  ar2_4096.csv  ar2_512.csv  ar2_8192.csv  earth.csv  fm.csv  genexamples.py  mmg.csv  noise_1024.csv  noise_16384.csv  repkern.py  sin.csv  sin2.csv  sin_noise.csv  sinc_1024.csv  sing.csv  sinsweep.csv  trafo.py  wilson.py
lib/: CMakeLists.txt  api.cc  api.hh  config.hh.in  convolution.cc  convolution.hh  dataptr.hh  detrend.hh  exception.cc  exception.hh  fft.hh  fft_fftw3.cc  fft_fftw3.hh  movingaverage.hh  object.cc  object.hh  types.hh  wavelet.cc  wavelet.hh  waveletanalysis.cc  waveletanalysis.hh  waveletconvolution.cc  waveletconvolution.hh  waveletsynthesis.cc  waveletsynthesis.hh  wavelettransform.cc  wavelettransform.hh  wilson.hh  wt.hh
lib/array/: array.hh  arrayiterator.hh  arrayobject.hh  arrayvalues.hh  operators.hh
lib/utils/: cputime.cc  cputime.hh  csv.cc  csv.hh  logger.cc  logger.hh  option_parser.cc  unittest.cc  unittest.hh
python/: CMakeLists.txt  numpy.i  wt.i
python/test/: run.py
search/: all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  functions_d.js  functions_e.js  groups_0.js  groups_1.js  pages_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
shared/: wtool.desktop
src/: CMakeLists.txt  application.cc  application.hh  contour.cc  contour.hh  fmtutil.cc  fmtutil.hh  importdialog.cc  importdialog.hh  item.cc  item.hh  itemview.cc  itemview.hh  loghandler.cc  loghandler.hh  main.cc  mainwindow.cc  mainwindow.hh  polygon.cc  polygon.hh  procinfo.cc  procinfo.hh  projectionitem.cc  projectionitem.hh  qcustomplot.cc  session.cc  session.hh  synthesisitem.cc  synthesisitem.hh  timeseriesitem.cc  timeseriesitem.hh  timeseriesplot.cc  timeseriesplot.hh  transformdialog.cc  transformdialog.hh  transformeditem.cc  transformeditem.hh  transformedplot.cc  transformedplot.hh  transformitem.cc  (+6 more)
src/resources/: about.html  resources.qrc
test/: CMakeLists.txt  convolutiontest.cc  convolutiontest.hh  ffttest.cc  ffttest.hh  main.cc  utilstest.cc  utilstest.hh  waveletconvolutiontest.cc  waveletconvolutiontest.hh  waveletsynthesistest.cc  waveletsynthesistest.hh  wavelettransformtest.cc  wavelettransformtest.hh
utils/: CMakeLists.txt  option_parser.hh
